force-app/main/default/objects/tc9_et__Calculation_Method__c/tc9_et__Calculation_Method__c.object-meta.xml
<CustomObject>
    <description>A child object to the Rates Calculator that holds individual Calculation Method details to be used in the calculation of Rate Calculator Lines</description>
    <label>Calculation Method</label>
    <nameField>
        <label>Calculation Method Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calculation Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>