force-app/main/default/objects/tc9_et__Calculation_Method__c/fields/tc9_et__Calculation_Based_On__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Calculation_Based_On__c</fullName>
    <description>Defines what value the Markup/Margin will be calculated on during rate calculator line generation.</description>
    <inlineHelpText>Defines what value the Markup/Margin will be calculated on during rate calculator line generation.</inlineHelpText>
    <label>Calculation Based On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__RC_Calculation_Based_On_Picklists</valueSetName>
    </valueSet>
</CustomField>