force-app/main/default/objects/tc9_et__Calculation_Method__c/fields/tc9_et__Calculation_Method_Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Calculation_Method_Description__c</fullName>
    <description>Records a description of the Calculation Method to assist Users in selecting the correct Calculation Method when creating Rate Calculators.</description>
    <inlineHelpText>Records a description of the Calculation Method to assist Users in selecting the correct Calculation Method when creating Rate Calculators.</inlineHelpText>
    <label>Calculation Method Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>