force-app/main/default/objects/tc9_et__Calculation_Method__c/fields/tc9_et__Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Calculation_Type__c</fullName>
    <description>Defines the type of Calculation Method used on any related Rate Calculators</description>
    <inlineHelpText>Defines the type of Calculation Method used on any related Rate Calculators</inlineHelpText>
    <label>Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Calculation_Method_Type</valueSetName>
    </valueSet>
</CustomField>