force-app/main/default/objects/tc9_et__Calculation_Method__c/fields/tc9_et__Calculation_Unit__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Calculation_Unit__c</fullName>
    <description>Defines if the values entered within the Margin / Mark Up Section of related Rate Calculators will be in Currency or Percentage format</description>
    <inlineHelpText>Defines if the values entered within the Margin / Mark Up Section of related Rate Calculators will be in Currency or Percentage format</inlineHelpText>
    <label>Calculation Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Calculation_Method_Unit</valueSetName>
    </valueSet>
</CustomField>